# Daria-Former

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
cli/: export.py  generate.py  train.py
configs/: daria_former_base.yaml  daria_former_large.yaml  daria_former_small.yaml
daria_former/: __init__.py  config.py  model.py
daria_former/context/: __init__.py  context_router.py
daria_former/core/: __init__.py  adaptive_norm.py  dac_block.py  emotion_ffn.py  multi_context_attention.py  positional.py  residual_fusion.py  rhythm_gate.py
daria_former/encoders/: __init__.py  audio_encoder.py  image_encoder.py  text_encoder.py
daria_former/generation/: __init__.py  generator.py
daria_former/lora/: __init__.py  lora_linear.py  lora_manager.py
daria_former/memory/: __init__.py  memory_bank.py  memory_system.py  retrieval.py
daria_former/modulation/: __init__.py  emotion.py  rhythm.py  variability.py
daria_former/training/: __init__.py  losses.py  optimizer.py  scheduler.py  trainer.py
daria_former/utils/: __init__.py  checkpoint.py  logging_utils.py
tests/: test_attention.py  test_config.py  test_dac_block.py  test_emotion.py  test_encoders.py  test_generation.py  test_lora.py  test_memory.py  test_model.py  test_training.py
