[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daria-former"
version = "0.1.0"
description = "Daria-Former: Custom Autoregressive Multi-Context Transformer Framework"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "einops>=0.7.0",
    "transformers>=4.36.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-timeout>=2.2.0",
]
wandb = [
    "wandb>=0.16.0",
]
flash = [
    "flash-attn>=2.4.0",
]

[project.scripts]
daria-train = "cli.train:main"
daria-generate = "cli.generate:main"
daria-export = "cli.export:main"

[tool.setuptools.packages.find]
include = ["daria_former*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
